Logout button on config

--- a/meteor/imports/ui/components/config/codes/index.html
+++ b/meteor/imports/ui/components/config/codes/index.html
@@ -140,9 +140,9 @@
                             <div class="90">
                                 <!-- Button New -->
                                 <p><a href="#" id="btn-new-codes" class="button button-fill button-big color-green">
-                                    Zugangsodes automatisch erstellen</a></p>
+                                    Zugangscodes automatisch erstellen</a></p>
                                 <div style="text-align: center;">
-                                    <span id="progress-text">No accounts</span>
+                                    <span id="progress-text">Keine Zugangscodes</span>
                                 </div>
 
                                 <p>
