--- a/meteor/imports/ui/components/config/home/main/index.html
+++ b/meteor/imports/ui/components/config/home/main/index.html
@@ -6,7 +6,7 @@
                 <div class="navbar-inner">
                     <div class="left"></div>
                     <div class="center">Aktueller Wettkampf</div>
-                    <div class="right"></div>
+                    <div class="right"><a href="#" class="logout-button">Abmelden</a></div>
                 </div>
             </div>
 
@@ -19,7 +19,7 @@
                                 <div class="item-inner">
                                     <div class="item-title label">Name</div>
                                     <div class="item-input" id="current-contest-name">
-                                        Loading...
+                                        Laden...
                                     </div>
                                 </div>
                             </div>
@@ -29,7 +29,7 @@
                                 <div class="item-inner">
                                     <div class="item-title label">Wettkampfart</div>
                                     <div class="item-input" id="current-contest-type">
-                                        Loading...
+                                        Laden...
                                     </div>
                                 </div>
                             </div>
