--- a/meteor/imports/ui/components/login/choices/index.html
+++ b/meteor/imports/ui/components/login/choices/index.html
@@ -12,6 +12,6 @@
         </ul>
     </div>
     <div class="list-block">
-        <div class="list-block-label">Some text containing the competition title.</div>
+        <div class="list-block-label">{{competition_notice}}</div>
     </div>
 </template>
