Updated No connection page

--- a/meteor/imports/ui/components/offline/index.html
+++ b/meteor/imports/ui/components/offline/index.html
@@ -4,16 +4,18 @@
             <div class="page">
                 <div class="page-content login-screen-content">
                     <div class="login-screen-title">Darn it!</div>
-                    <p style="text-align: center; color:#455A64">Wir können unsere fleißigen Gorillas nicht erreichen!
+                    <div class="list-block-label" style="color:#455A64; padding-left: 10%; padding-right: 10%">Wir
+                        können unsere fleißigen Gorillas nicht erreichen!
                         <br> Bitte setze dich so bald wie möglich mit ihnen in Verbindung um diesen Teil der Seite
-                        nutzen zu können.</p>
+                        nutzen zu können.
+                    </div>
                     <div class="list-block">
                         <img src="/gorilla.jpg" style="width: 100%">
                     </div>
                     <div class="list-block" style="text-align: center;">
                         <div class="btn-spenden"
                              onclick="window.open('https://www.wwf.de/spenden-helfen/fuer-ein-projekt-spenden/gorillas/formular/anzeigen/spenden/eintragen/', '_blank')">
-                            Spenden
+                            Mehr Gorillas!
                         </div>
                     </div>
                 </div>
