--- a/meteor/imports/ui/components/login/choices/index.html
+++ b/meteor/imports/ui/components/login/choices/index.html
@@ -5,7 +5,7 @@
                 <li class="item-content">
                     <div class="item-inner">
                         <div class="item-link list-button {{class}}" data-type="{{#with c}}{{type}}{{/with}}"
-                             style="width: 100%">{{#with c}}{{title}}{{/with}}</div>
+                             style="cursor: pointer; width: 100%;">{{#with c}}{{title}}{{/with}}</div>
                     </div>
                 </li>
             {{/each}}
