--- a/meteor/imports/ui/components/output/index.html
+++ b/meteor/imports/ui/components/output/index.html
@@ -37,9 +37,7 @@
                         </a>
                     </div>
                     <div class="center">{{get_groupname}}</div>
-                    <div class="right">
-                        <a href="#" class="link">Abmelden</a>
-                    </div>
+                    <div class="right"><a href="#" class="logout-button">Abmelden</a></div>
                 </div>
             </div>
 
