Login: Clear Password field if user clicks the back button

--- a/meteor/imports/ui/components/login/login/index.html
+++ b/meteor/imports/ui/components/login/login/index.html
@@ -19,7 +19,7 @@
                 <table align="center">
                     <tr>
                         <td style="border-right: 1px solid lightgrey; padding-right: 20px;">
-                            <a href="#" class="item-link list-button login-back-button">Zurück</a>
+                            <a href="#" class="item-link list-button login-back-button" data-type="{{type}}">Zurück</a>
                         </td>
                         <td style="padding-left: 20px;">
                             <a href="#" class="item-link list-button login-button" data-type="{{type}}">Anmelden</a>
