Config ui redirect to /config if not editing a competition

--- a/meteor/imports/ui/components/config/home/main/index.html
+++ b/meteor/imports/ui/components/config/home/main/index.html
@@ -11,7 +11,7 @@
             </div>
 
             <div class="page-content">
-                <div class="content-block-title">Hier findest du Informationen über den aktuellen Wettampf</div>
+                <div class="content-block-title">Hier finden Sie Informationen über den aktuellen Wettampf</div>
                 <div class="list-block">
                     <ul>
                         <li>
