--- a/meteor/imports/ui/components/input/index.html
+++ b/meteor/imports/ui/components/input/index.html
@@ -22,7 +22,8 @@
                 <div id="input-swiper" class="swiper-container" style="height: 100%;">
                     <div class="swiper-wrapper">
                         {{#each a in athletes}}
-                            <div class="swiper-slide" data-hash="{{a.id}}" style="overflow-y: scroll;">
+                            <div class="swiper-slide" data-hash="{{a.id}}"
+                                 style="overflow-y: scroll; overflow-x: hidden;">
                                 {{#with a}}
                                     {{#each s in sportType}}
                                         {{>attempts sportType=s}}
