Config: sort athletes alphabetically

--- a/meteor/imports/ui/components/config/athletes/middle/index.html
+++ b/meteor/imports/ui/components/config/athletes/middle/index.html
@@ -42,7 +42,7 @@
                             {{#with a}}
                                 <!-- Iterated Athlete Link -->
                                 <li>
-                                    <a href="" class="item-link link-open-athlete" data-athlete_index="{{@index}}">
+                                    <a href="" class="item-link link-open-athlete" data-athlete_index="{{index}}">
                                         <div class="item-content">
                                             <div class="item-inner">
                                                 <div class="item-title">{{firstName}} {{lastName}}</div>
