Fixed print_layout table header positions.

--- a/meteor/imports/ui/components/config/codes/index.html
+++ b/meteor/imports/ui/components/config/codes/index.html
@@ -208,8 +208,8 @@
             <table class="print-password-table" style="width:100%">
                 <tbody>
                     <tr>
-                        <th>Zugang</th>
-                        <th>Passwort</th>
+                        <th><p align="left">Zugang</p></th>
+                        <th><p align="right">Passwort</p></th>
                     </tr>
                     {{#each l in login_stations}}
                         <tr>
@@ -225,8 +225,8 @@
             <div class="print-password-title">Gruppenlogins</div>
             <table class="print-password-table">
                 <tr>
-                    <th>Zugang</th>
-                    <th>Passwort</th>
+                    <th><p align="left">Zugang</p></th>
+                    <th><p align="right">Passwort</p></th>
                 </tr>
                 {{#each l in login_groups}}
                     <tr>
@@ -241,8 +241,8 @@
             <div class="print-password-title">Eigene Logins</div>
             <table class="print-password-table">
                 <tr>
-                    <th>Zugang</th>
-                    <th>Passwort</th>
+                    <th><p align="left">Zugang</p></th>
+                    <th><p align="right">Passwort</p></th>
                 </tr>
                 {{#each l in login_custom}}
                     <tr>
