Fixed progress bar @ code generation

--- a/meteor/imports/ui/components/config/codes/index.html
+++ b/meteor/imports/ui/components/config/codes/index.html
@@ -161,9 +161,9 @@
                                     <span id="progress-text">Keine Zugangscodes</span>
                                 </div>
 
-                                <p>
-                                    <span id="progress-bar" data-progress="10" class="progressbar"></span>
-                                </p>
+                                <div id="code-generation-progress" class="progressbar" data-progress="20">
+                                    <span></span>
+                                </div>
                                 <p><a href="#" id="btn-add-account"
                                       class="button button-fill button-big color-green">Eigenen Zugangscode
                                     erstellen</a>
