--- a/meteor/imports/ui/components/input/index.html
+++ b/meteor/imports/ui/components/input/index.html
@@ -15,7 +15,7 @@
                             </div>
                         </div>
                     </div>
-                    <div></div>
+                    <div><a href="#" data-popup=".popup-help" class="open-popup"><i class="f7-icons">help</i></a></div>
                 </div>
             </div>
 
@@ -119,6 +119,17 @@
         }
 
     </style>
+
+    <!--TODO update-->
+    <div class="popup popup-help">
+        <p style="right: 14px; top: 0; position: absolute;"><a href="#" class="close-popup"><i class="f7-icons">close_round</i></a>
+        </p>
+        <div class="content-block">
+            <h2>Hilfe</h2>
+            <div class="page-content">
+            </div>
+        </div>
+    </div>
 </template>
 
 <template name="sportTypeDescriptions">
