Add little white blob around/behind number on input UI (closes #68)

--- a/meteor/imports/ui/components/input/index.html
+++ b/meteor/imports/ui/components/input/index.html
@@ -53,7 +53,8 @@
                             </div>
                         {{/each}}
                     </div>
-                    <div class="swiper-pagination"></div>
+                    <div class="swiper-pagination"
+                         style="left: calc(50% - 25px); text-align: center; width: 50px; padding: 5px; background-color:rgba(255, 255, 255, 0.8);; border-radius: 20px;"></div>
                 </div>
             </div>
 
@@ -127,6 +128,7 @@
         <div class="content-block">
             <h2>Hilfe</h2>
             <div class="page-content">
+
             </div>
         </div>
     </div>
